# LangWitch

./: .gitignore  CMakeLists.txt  README.md  app  french.txt  language_trie.h  main.cpp  ngram.cpp  normalize.h  trie_node.h
.fleet/: run.json
